--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-
 <html>
     <head>
+        <link type = "text/css" rel = "stylesheet" href = "normalize.css"/>
+        <link type = "text/css" rel = "stylesheet" href = "styles.css"/>
         <title>Chaz Potter - My Favorite Video Games of All Time</title>
     </head>
         <body>
@@ -19,27 +20,27 @@
             <main>
                 <article>
                     <section>
-                        <h2>Goldeneye 007 N64</h2>
+                        <h2 class = "headings">Goldeneye 007 N64</h2>
                         <p>One of the first games I ever beat. First person shooter and one of the most popular video games of all time.</p>
                         <img src ="http://ocremix.org/files/images/games/n64/0/goldeneye-007-n64-cover-front-31991.jpg" alt = "Goldeneye 007">
                         </section>
                         <section>
-                            <h2>Blitz 64 </h2>
+                            <h2 class = "headings">Blitz 64 </h2>
                             <p>The first football game I ever owned. It was alot of fun to play with friends and who can forget all the mayhem that went on after the play!!</p>
                             <img src ="https://r.mprd.se/media/images/40034-NFL_Blitz_2001_(USA)-1453508519-thumb.jpg" alt = "Blitz 64">
                             </section>
                             <section>
-                                <h2>DragonBall Z Budokai 3</h2>
+                                <h2 class = "headings">DragonBall Z Budokai 3</h2>
                                 <p>Always been a huge dbz fan and in my humble opinion... The best dragonball z game ever made!!</p>
                                 <img src ="http://ps2media.ign.com/ps2/image/object/679/679951/dbzbudokai3_ps2box_usa_org_001boxart_160h.jpg" alt = "Dragonball Z Budokai 3">
                                 </section>
                                 <section>
-                                    <h2>Marvel Vs Capcom 3 : Ultimate Edition</h2>
+                                    <h2 class = "headings">Marvel Vs Capcom 3 : Ultimate Edition</h2>
                                     <p>The best fighter game I've ever played. Tag team action with some of my favorite heroes and villians.</p>
                                     <img src ="http://download.gamezone.com/uploads/image/data/1212404/article_post_width_Ultimate-Marvel-vs-Capcom-3.jpg" alt = "Marvel Vs Capcom 3">
                                     </section>
                                     <section>
-                                        <h2>Grand Theft Auto 5</h2>
+                                        <h2 class = "headings">Grand Theft Auto 5</h2>
                                         <p>Not for the faint of heart or kids lol. Everything you need in a great game, Destruction, chaos, free reign and no consequences(outside of the police and random citizen vigilantes).</p>
                                         <img src ="https://blogs-images.forbes.com/insertcoin/files/2014/12/gta-5-mass-murder.jpg?width=960" alt = "Grand Theft Auto 5">
                                         </section>
